--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="theme-color" content="#faf8ef">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icon-192x192.png" sizes="192x192">
+
 <title>maden_games</title>
 
 <style>
