--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ h1 {
 <h1>🎮 Pilih Mode Permainan</h1>
 
 <div class="menu">
-   <a href=">🧱 puzzle</a>
+   <a href="GAMES/index.html">🥷pisau buah</a>
   <a href="c">🎯 Mode Klasik 2048</a>
   <a href="">🧱 Mode Tetris 2048</a>
   <a href="bola.html">⚽ Mode Butir 2048</a>
