--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ h1 {
 
 <div class="menu">
    <a href="GAMES/index.html">🥷pisau buah</a>
-  <a href="c">🎯 Mode Klasik 2048</a>
+  <a href="2048.html">🎯2048</a>
   <a href="">🧱 Mode Tetris 2048</a>
   <a href="bola.html">⚽ Mode Butir 2048</a>
   <a href="gra">🌍 Mode Gravitasi 2048</a>
