--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ h1 {
 <h1>🎮 Pilih Mode Permainan</h1>
 
 <div class="menu">
+  <a href="GAMES/pixel.html">📦pixel</a>
    <a href="GAMES/index.html">🥷pisau buah</a>
   <a href="GAMES/2048.html">🎯2048</a>
   <a href="">🧱 Mode Tetris 2048</a>
