--- a/GAMES/pixel.html
+++ b/GAMES/pixel.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icon-192x192.png" sizes="192x192">
+
     <title>Voxel World - Navigasi Sesuai</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
