--- a/GAMES/pixel.html
+++ b/GAMES/pixel.html
@@ -76,10 +76,10 @@
 
     <div id="ui-layer">
         <div class="dpad">
-            <div id="up" class="dpad-btn">▲</div>
-            <div id="left" class="dpad-btn">◀</div>
-            <div id="right" class="dpad-btn">▶</div>
-            <div id="down" class="dpad-btn">▼</div>
+            <div id="down" class="dpad-btn">▲</div>
+            <div id="right" class="dpad-btn">◀</div>
+            <div id="left" class="dpad-btn">▶</div>
+            <div id="up" class="dpad-btn">▼</div>
         </div>
         <div class="action-group">
             <div id="btn-jump" class="btn-action">LOMPAT</div>
