--- a/GAMES/pixel.html
+++ b/GAMES/pixel.html
@@ -32,10 +32,10 @@
             backdrop-filter: blur(8px);
         }
         .dpad-btn:active { background: rgba(255,255,255,0.9); color: black; }
-        #up { grid-area: down; }
-        #down { grid-area: up; }
-        #left { grid-area: right; }
-        #right { grid-area: left; }
+        #up { grid-area: up; }
+        #down { grid-area: down; }
+        #left { grid-area: left; }
+        #right { grid-area: right; }
 
         /* Tombol Aksi - Dipindahkan lebih tinggi agar tidak tertekan bersamaan */
         .action-group {
@@ -69,10 +69,10 @@
         <p style="color: #ffeb3b"><b>KONTROL DIPERBAIKI:</b></p>
         <div id="ui-layer">
         <div class="dpad">
-            <div id="down" class="dpad-btn">▲</div>
+            <div id="up" class="dpad-btn">▲</div>
             <div id="right" class="dpad-btn">◀</div>
             <div id="left" class="dpad-btn">▶</div>
-            <div id="up" class="dpad-btn">▼</div>
+            <div id="down" class="dpad-btn">▼</div>
         </div>
         <div class="action-group">
             <div id="btn-jump" class="btn-action">LOMPAT</div>
